applications/minio/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    app.kubernetes.io/name: minio
