applications/minio/base/service-console.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-console
  namespace: minio
spec:
  type: ClusterIP
  ports:
    - name: console
      port: 9001
      targetPort: 9001
      protocol: TCP
  selector:
    app.kubernetes.io/name: minio
