applications/minio/base/service-hl.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-hl
  namespace: minio
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/component: server
spec:
  clusterIP: None
  ports:
  - name: api
    port: 9000
    targetPort: 9000
    protocol: TCP
  - name: console
    port: 9001
    targetPort: 9001
    protocol: TCP
  selector:
    app.kubernetes.io/name: minio
    app.kubernetes.io/component: server
