applications/minio/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-api
  namespace: minio
spec:
  type: ClusterIP
  ports:
    - name: api
      port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app.kubernetes.io/name: minio
